<resources>
    <string name="app_name">Horgász webshop</string>
    <string name="name">Név</string>
    <string name="user_name">Felhasználó név</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="password1">Jelszó még egyszer</string>
    <string name="login">Belépés</string>
    <string name="register">Regisztráció</string>
    <string name="cancel">Mégse</string>
    <string name="telefonszam">Telefonszám</string>
    <string name="termekek">Termék leírás: ....</string>
</resources>