<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hatter"
    tools:context=".RegisztracioActivity">

    <TextView
        android:id="@+id/LabelRegisztracio"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor = "@color/blue"
        android:text = "@string/register"
        android:ems="10"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/EditTextFNev"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.4"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelRegisztracio"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/EditTextNev"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:alpha="0.4"
        android:inputType="text"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFNev"
        app:layout_constraintVertical_bias="0.05"/>
    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:alpha="0.4"
        android:inputType="textEmailAddress"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextNev"
        app:layout_constraintVertical_bias="0.05"/>
    <EditText
        android:id="@+id/EditTextTelefonszam"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/telefonszam"
        android:alpha="0.4"
        android:inputType="phone"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
        app:layout_constraintVertical_bias="0.05"/>
    <EditText
        android:id="@+id/EditTextJelszo"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:alpha="0.4"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextTelefonszam"
        app:layout_constraintVertical_bias="0.05"/>
    <EditText
        android:id="@+id/EditTextJelszo1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password1"
        android:alpha="0.4"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextJelszo"
        app:layout_constraintVertical_bias="0.05"/>
    <Button
        android:id="@+id/buttonRegisztracio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/blue"
        android:text="@string/register"
        android:onClick="regisztracio"
        app:backgroundTint="@color/blue_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextJelszo1" />
    <Button
        android:id="@+id/buttonMegse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cancel"
        android:onClick="megse"
        android:background="@color/blue"
        app:backgroundTint="@color/blue_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisztracio" />



</androidx.constraintlayout.widget.ConstraintLayout>